--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,6 +24,7 @@
       var chartLoad = false;
       var histogram = [];
 
+//Function to draw the line chart
       function drawBasic() {
         var data = new google.visualization.DataTable();
         data.addColumn("number", "X");
@@ -47,7 +48,7 @@
         chart.draw(data, options);
         chartLoad = true;
       }
-
+//function to draw the guage chart or meter
       function drawChart(memory) {
         var data = google.visualization.arrayToDataTable([
           ["Label", "Value"],
@@ -68,12 +69,8 @@
           document.getElementById("chart_div1")
         );
 
-        // chart.draw(data, options);
-
-        // setInterval(function () {
           data.setValue(0, 1, memory);
           chart.draw(data, options);
-        // }, 1000);
       }
       var socket = io();
       socket.on("Memory", (ramConsume) => {
@@ -82,7 +79,6 @@
       });
 
       socket.on("histogram", (cpuHistogram) => {
-        // console.log(cpuHistogram);
         histogram = cpuHistogram;
 
         if (chartLoad) drawBasic();
